--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,12 @@ dependencies:
   google_maps_flutter: ^0.5.20+1
   geolocator: ^5.1.1+1
   date_format: ^2.0.2
-  image_picker: ^0.7.5+3
+  image_picker: ^0.8.2
   rflutter_alert: ^1.1.0
   firebase_storage: ^3.1.1
   intl: ^0.15.8
+  mask_text_input_formatter: ^2.0.0
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
